# second-self

./: .gitignore  AGENTS.md  CLAUDE.md  CommitGithub.md  FAQ.md  LICENSE  Quick Start.md  README.md  Start-Second-Self.cmd  pyproject.toml
.agents/skills/brain-backup/: SKILL.md
.agents/skills/brain-capture/: SKILL.md
.agents/skills/brain-conflict-review/: SKILL.md
.agents/skills/brain-intake/: SKILL.md
.agents/skills/brain-project-handoff/: SKILL.md
.agents/skills/brain-quarterly-review/: SKILL.md
.agents/skills/brain-recall/: SKILL.md
.agents/skills/brain-restore/: SKILL.md
.agents/skills/second-self-backup/: SKILL.md
.agents/skills/second-self-capture/: SKILL.md
.agents/skills/second-self-project-writeback/: SKILL.md
.claude/: settings.json
.codex/: hooks.json
.githooks/: pre-commit
.github/workflows/: validate.yml
.obsidian/: app.json  core-plugins.json  graph.json
01-strategy-storage/: README.md
02-skills-projects/: README.md
03-wiki/: README.md
90-system/: README.md
90-system/docs/: OPERATING-MODEL.md  SECURITY.md
90-system/migrations/: README.md
90-system/tests/: conftest.py  test_broker.py  test_capture.py  test_dashboard.py  test_ingest.py  test_projects_hooks.py  test_scaffold_indexes.py  test_validation.py  test_web.py  test_wiki.py
main_brain/: cli.py  frontmatter.py  ingest.py  paths.py  projects.py  validation.py
scripts/: backup.ps1  bootstrap.ps1  brain.ps1  restore.ps1
system/: OPERATING-MODEL.md  SECURITY.md
tests/: test_broker.py  test_projects_hooks.py  test_scaffold_indexes.py
(+73 files in other folders)
